...
            "state" : "translated",
            "value" : "Date de cuisson"
          }
        }
      }
    },
    "Backen" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bake"
          }
...
            "state" : "translated",
            "value" : "Durée [min]"
          }
        }
      }
    },
    "Dauer in Minuten" : {
      "comment" : "A label for the duration of a step in minutes.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
...
            "state" : "translated",
            "value" : "Définir les rappels"
          }
        }
      }
    },
    "Erinnerungen wurden gesetzt" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reminders were set"
          }
...
            "state" : "translated",
            "value" : "Ni votre nom ni votre adresse e-mail ne sont demandés."
          }
        }
      }
    },
    "Fertig" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Done"
          }
...
            "state" : "translated",
            "value" : "Aucune liste de courses"
          }
        }
      }
    },
    "Keine geplanten Schritte" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No scheduled steps"
          }
...
            "state" : "translated",
            "value" : "Prochaine étape"
          }
        }
      }
    },
    "Name" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Name"
          }
...
            "state" : "translated",
            "value" : "Ouvre les pages dans le navigateur."
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Signaler la recette"
          }
        }
      }
    },
    "Rezept speichern" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Save recipe"
          }
...
